<resources>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="app_name">COOL100</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="falult_error_name">Fault name</string>
    <string name="falult_error_reasion">Fault reason</string>
    <string name="falult_error_way">Fault reason</string>
    <string name="falult_error_reset">Reset fault</string>
    <string name="falult_error_code">Fault code</string>
    <string name="falult_error_category">Fault type</string>
    <string name="falult_error_appointset">Specified fault setting</string>
    <string name="falult_error_appoint_descr">If fault coincides with this setting, [Specified fault parameter] will record fault info. This info will not be replaced by the next fault info.</string>
    <string name="falult_error_child_code">Fault subcode</string>
    <string name="run_speed">Speed_run</string>
    <string name="set_speed">Speed_set</string>
    <string name="elevator_position">Elev. pos.</string>
    <string name="output_current">Output curr.</string>
    <string name="busbar_voltage">Bus volt.</string>
    <string name="output_voltage">Output volt.</string>
    <string name="output_rate">Output freq.</string>
    <string name="falult_time">Fault time</string>
    <string name="terminal_status">Terminal state</string>
    <string name="disconnectorclose">0（Disconnect） 1（Connect）</string>
    <string name="falult_search">Search (Elevator ID)</string>
    <string name="falult_search_key">Keywords of fault code or fault name</string>
    <string name="common_falult">Common fault</string>
    <string name="login_name">Account.</string>
    <string name="login_phone">Phone.</string>
    <string name="login_name_hint">Enter Phone No.</string>
    <string name="login_name_hint1">Enter username</string>
    <string name="login_name_username">UserName</string>
    <string name="psw_new_name">New password</string>
    <string name="psw_new_name_hint">Enter new password</string>
    <string name="getnum_click_name">Acquire</string>
    <string name="submit_click_name">Submit</string>
    <string name="verificty_name">Verification code</string>
    <string name="verificty_name_hint">Verification code</string>
    <string name="username_hint">please enter user name</string>
    <string name="first_parameter">First-level parameter</string>
    <string name="second_parameter">Second-level parameter</string>
    <string name="psw_hint">Enter password</string>
    <string name="login_click_name">Login</string>
    <string name="register_click_name">Register</string>
    <string name="forget_psw_name">Modify Password</string>
    <string name="customer_phone">Customer Service:400-8858-959</string>
    <string name="company_name">Shenzhen Hpmont Technology Co.,Ltd|www.hpmont.com</string>
    <string name="person_name">Name</string>
    <string name="person_name_hint">Enter name</string>
    <string name="company_name_t">Company</string>
    <string name="company_name_t_hint">Enter company</string>
    <string name="email_t">Email</string>
    <string name="email_t_hint">Enter email</string>
    <string name="lianxi_t_hint">Enter contact staff</string>
    <string name="iphone_t">Phone No.</string>
    <string name="iphone_t1">Phone No.</string>
    <string name="address_t">Address</string>
    <string name="address_t_hint">Enter address</string>
    <string name="iphone_t_hint">Enter Phone No.</string>
    <string name="password_t">Password</string>
    <string name="password_t_hint">Enter password</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="parameter_descr">Parameter description</string>
    <string name="parameter_range">Parameter range</string>
    <string name="current_value">Current value</string>
    <string name="parameter_modified">Modify</string>
    <string name="sure">Confirm</string>
    <string name="floor_direction">Floor&amp;Dir.</string>
    <string name="levele_signal">Leveling signal</string>
    <string name="run_times">Run times</string>
    <string name="control_automatic">Automatic</string>
    <string name="control_openlock">Door lock open</string>
    <string name="control_closelock">Door lock close</string>
    <string name="control_examine">Inspection</string>
    <string name="control_emergency_run">ARO Mode</string>
    <string name="control_selflearning">learning</string>
    <string name="control_firefighting_station">Fire base</string>
    <string name="control_firefighting_model">Fireman</string>
    <string name="control_alone">Independent</string>
    <string name="control_auto_leveling">Re-leveling</string>
    <string name="vipyunxing">VIP</string>
    <string name="control_vip">VIP</string>
    <string name="control_safe_open">S.circuit disc</string>
    <string name="control_safe_close">S.circuit conn</string>
    <string name="control_parallel_model">Duplex mode</string>
    <string name="control_lock_status">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Parking</string>
    <string name="control_front_door_status">&#160;&#160;&#160;&#160;&#160;Front door</string>
    <string name="control_back_door_status"> &#160;&#160;&#160;&#160;&#160;&#160;Rear door</string>
    <string name="control_speed">Elevator speed</string>
    <string name="control_output_current">Output current</string>
    <string name="control_output_voltage">Output voltage</string>
    <string name="control_busbar_voltage">Bus voltage</string>
    <string name="control_overload">Overload</string>
    <string name="falult_current_info">Current fault info</string>
    <string name="falult_histoty_info">Historical fault info</string>
    <string name="falult_help">Help</string>
    <string name="operate_help">User Manual</string>
    <string name="falult_code_way">Fault code and solution</string>
    <string name="falult_other_record">Other records during fault</string>
    <string name="falult_appoint">Specified fault</string>
    <string name="falult_appoint_setting">Specified fault setting</string>
    <string name="falult_appoint_param">Specified fault record</string>
    <string name="falult_date">Date</string>
    <string name="menu_1">Monitor</string>
    <string name="menu_2">Func.Code</string>
    <string name="menu_3">Pro debug</string>
    <string name="menu_4">Fault</string>
    <string name="unit_name">Unit name</string>
    <string name="decade_name">Tens name</string>
    <string name="open_door">Door open</string>
    <string name="close_door">Door close</string>
    <string name="elevator_falult">Fault</string>
    <string name="door_lock">Door lock</string>
    <string name="leveling">Leveling</string>
    <string name="falult_error_floor">Fault floor</string>
    <string name="month">&#160;&#160;-&#160;&#160;</string>
    <string name="day">&#160;&#160;&#160;&#160;&#160;</string>
    <string name="time">&#160;&#160;:&#160;&#160;</string>
    <string name="minute">&#160;&#160;</string>
    <string name="get_data_error">Data error</string>
    <string name="please_input">Enter</string>
    <string name="input_error_toast">Sorry! Parameter out of range. Please re-enter parameter</string>
    <string name="get_data_ontime">Acquring…</string>
    <string name="E40">E40 Elevator runs overtime</string>
    <string name="E41">E41 Safety circuit disconnected</string>
    <string name="E42">E42 Door lock disconnect during running</string>
    <string name="E46">E46 Abnormal re-leveling</string>
    <string name="E51">E51 CAN communication fault</string>
    <string name="E52">E52 Hall call communication fault</string>
    <string name="E53">E53 Door lock is short-connected</string>
    <string name="E56">E56 Abnormal feedback of running contactor</string>
    <string name="E57">E57 Abnormal feedback of braking contactor</string>
    <string name="E58">E58 Abnorla releveling signal</string>
    <string name="falult_error_search">Search fault</string>
    <string name="mild">Light</string>
    <string name="medium">Moderate</string>
    <string name="serious">Severe</string>
    <string name="current_no_fault">Fault free</string>
    <string name="phone_num_error">Re-enter Account. as format is wrong</string>
    <string name="send_vertifi_code">Send vertification code</string>
    <string name="modify_password">Modiying password</string>
    <string name="re_send_vertifi_code">Re-send</string>
    <string name="second">s</string>
    <string name="parameter_tv">Group parameter setting</string>
    <string name="bluetooth_disconnect_toast">Re-connect bluetooth</string>
    <string name="actual_parameter_cannot_modifi">Actual parameter, unmodifiable</string>
    <string name="run_parameter_cannot_modifi">Runnig parameter, unmodifiable</string>
    <string name="defult_parameter_cannot_modifi">Default parameter, unmodifiable</string>
    <string name="parameter_cannot_modifi">Unmodifiable parameter</string>
    <string name="service_phone">Customer servicez:</string>
    <string name="dial">Dial</string>
    <string name="logining">Logining…</string>
    <string name="loading">Loading…</string>
    <string name="exit_toadt">Click again to exit</string>
    <string name="limits_set">Permissions setting</string>
    <string name="software_name">Elevator Debugger</string>
    <string name="input_name_hint">Enter name</string>
    <string name="input_company_name_hint">Enter company name</string>
    <string name="input_email_hint">Enter email</string>
    <string name="input_tel_hint">Enter Account.</string>
    <string name="input_tel_hint1">Please enter your phone number</string>
    <string name="input_password_hint">Enter password</string>
    <string name="connect_register">Registering...</string>
    <string name="macro_set_name">Macro setting</string>
    <string name="control_driver">Driver</string>
    <string name="control_full_load">Full</string>
    <string name="control_not_lock_status">Normal</string>
    <string name="control_openning">Opening</string>
    <string name="control_opend">Opened</string>
    <string name="control_closing">Closing</string>
    <string name="control_closed">Closed</string>
    <string name="control_door_falut">Fault</string>
    <string name="control_door_stop">Stop</string>
    <string name="control_alone_level">Independent</string>
    <string name="control_group">Group cont.</string>
    <string name="upload_data">Upload data to phone</string>
    <string name="hardware_info">Hardware Info</string>
    <string name="elevator_info1">Elevator Infos</string>
    <string name="wifi_set">Wifi Setting</string>
    <string name="contact_staff">Contact staff</string>
    <string name="esptouch1_ssid_title">SSID: </string>
    <string name="esptouch1_bssid_title">BSSID: </string>
    <string name="esptouch1_password_title">Password: </string>
    <string name="esptouch1_device_count_title">Device count: </string>
    <string name="esptouch1_package_broadcast">Broadcast</string>
    <string name="esptouch1_package_multicast">Multicast</string>
    <string name="esptouch1_confirm">Confirm</string>
</resources>